--- a/ateam-hsk/package.json
+++ b/ateam-hsk/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.12.3",
+    "@mui/icons-material": "^5.2.4",
     "@mui/material": "^5.2.4",
     "@mui/styled-engine-sc": "^5.1.0",
     "@testing-library/jest-dom": "^5.16.1",
@@ -15,6 +16,7 @@
     "concurrently": "^6.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "react": "^17.0.2",
+    "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
@@ -46,6 +48,7 @@
   },
   "devDependencies": {
     "@types/react": "^17.0.37",
+    "@types/react-burger-menu": "^2.8.2",
     "@types/react-dom": "^17.0.11",
     "@types/styled-components": "^5.1.18",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
